rendering properly. Need to organize into different files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </fieldset>
         <fieldset>
             <label for="journalEntry">Journal entry</label>
-                <input type="text" name="entry" id="entry">
+                <input type="text" name="entry" id="contents">
         </fieldset>
         <fieldset>
             <label for="moodForTheDay">Mood for the day</label>
