functioning edit button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Daily Journal 1</h1>
     <form action="">
+        <input type="hidden" id="entryId" value=""/>
         <fieldset>
             <label for="journalDate">Date of entry</label>
             <input type="date" name="journalDate" id="journalDate">
