added css but non functioning

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles/journal.css">
+    <link rel="stylesheet" href="./styles/journal.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Daily Journal</title>
 </head>
 
 <body>
-    <h1>Daily Journal 1</h1>
+    <h1>Daily Journal</h1>
     <form action="">
         <input type="hidden" id="entryId" value=""/>
         <fieldset>
@@ -35,7 +35,7 @@
                 <option value="excited">Excited</option>
             </select>
         </fieldset>
-        <input id="record-button" type="button" value="Record Journal Entry">
+        <input id="record-button" type="button" value="Record Journal Entry" class="record-btn">
         <fieldset>
             <legend>
                 <label for="moodSelector"><strong>Filter Journal Entries by Mood</strong></label>
